# defrag-enhanced

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  build.py  compile_flags.txt  pyproject.toml
.github/workflows/: ci.yml
assets/scripts/: dfe.shader
scripts/: format_symbols.py  port_symbols.py
src/cgame/: cg_bsp.c  cg_consolecmds.c  cg_draw.c  cg_entity_viewer.c  cg_ents.c  cg_main.c  cg_mem.c  cg_overbounce.c  cg_poi.c  cg_recall.c  cg_savestate.c  cg_servercmds.c  cg_snapshot.c  cgame.h  df_stuff.c  hello.c  instruction_patches.py  symbols.toml
src/common/: assert.h  base64.c  base64.h  bg_savestate.c  bg_savestate.h  collections.h  cvar.c  cvar.h  extensions.c  extensions.h  fs.c  fs.h  hook.h  log.h  q_math.c  q_math.h  qfiles.h  stb_ds.c  utils.h
src/game/: df_timer.c  g_active.c  g_cmds.c  g_savestate.c  hello.c  instruction_patches.py  qagame.h  symbols.toml
src/libc/: assert.h  ctype.h  limits.h  malloc.c  math.c  math.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.c  string.h
src/ui/: stb_malloc.h  symbols.toml  ui.h  ui_main.c  ui_nuklear.c
vm/: cgame.qvm  qagame.qvm  ui.qvm
